--- a/docs/rtk-query/api/created-api/cache-management.mdx
+++ b/docs/rtk-query/api/created-api/cache-management.mdx
@@ -5,6 +5,8 @@ sidebar_label: Cache Management
 hide_title: true
 ---
 
+&nbsp;
+
 # API Slices: Cache Management Utilities
 
 The API slice object includes cache management utilities that are used for implementing [optimistic updates](../../usage/optimistic-updates.mdx). These are included in a `util` field inside the slice object.
