--- a/docs/rtk-query/usage/error-handling.mdx
+++ b/docs/rtk-query/usage/error-handling.mdx
@@ -5,6 +5,8 @@ sidebar_label: Error Handling
 hide_title: true
 ---
 
+&nbsp;
+
 # `Error Handling`
 
 If your query or mutation happens to throw an error when using [fetchBaseQuery](../api/fetchBaseQuery), it will be returned in the `error` property of the respective hook.
@@ -72,15 +74,19 @@ Redux-Toolkit released [matching utilities](https://redux-toolkit.js.org/api/mat
 :::
 
 ```ts title="Error catching middleware example"
-import { MiddlewareAPI, isRejectedWithValue, Middleware } from '@reduxjs/toolkit'
+import {
+  MiddlewareAPI,
+  isRejectedWithValue,
+  Middleware,
+} from '@reduxjs/toolkit'
 import { toast } from 'your-cool-library'
 
 /**
  * Log a warning and show a toast!
  */
-export const rtkQueryErrorLogger: Middleware = (api: MiddlewareAPI) => (next) => (
-  action
-) => {
+export const rtkQueryErrorLogger: Middleware = (api: MiddlewareAPI) => (
+  next
+) => (action) => {
   // RTK Query uses `createAsyncThunk` from redux-toolkit under the hood, so we're able to utilize these use matchers!
   if (isRejectedWithValue(action)) {
     console.warn('We got a rejected action!')
