--- a/docs/rtk-query/usage/pagination.mdx
+++ b/docs/rtk-query/usage/pagination.mdx
@@ -5,6 +5,8 @@ sidebar_label: Pagination
 hide_title: true
 ---
 
+&nbsp;
+
 # Pagination
 
 RTK Query makes it straightforward to integrate with a standard index-based pagination API. This is the most common form of pagination that you'll need to implement.
