--- a/docs/api/configureStore.mdx
+++ b/docs/api/configureStore.mdx
@@ -5,6 +5,8 @@ sidebar_label: configureStore
 hide_title: true
 ---
 
+&nbsp;
+
 # `configureStore`
 
 A friendly abstraction over the standard Redux `createStore` function that adds good defaults
