--- a/docs/api/immutabilityMiddleware.mdx
+++ b/docs/api/immutabilityMiddleware.mdx
@@ -5,6 +5,8 @@ sidebar_label: Immutability Middleware
 hide_title: true
 ---
 
+&nbsp;
+
 # Immutability Middleware
 
 A port of the [`redux-immutable-state-invariant`](https://github.com/leoasis/redux-immutable-state-invariant) middleware, customized for use with Redux Toolkit. Any detected mutations will be thrown as errors.
@@ -61,10 +63,10 @@ export const exampleSlice = createSlice({
     ignoredPath: 'single level',
     ignoredNested: {
       one: 'one',
-      two: 'two'
-    }
+      two: 'two',
+    },
   },
-  reducers: {}
+  reducers: {},
 })
 
 export default exampleSlice.reducer
@@ -73,19 +75,19 @@ export default exampleSlice.reducer
 
 import {
   configureStore,
-  createImmutableStateInvariantMiddleware
+  createImmutableStateInvariantMiddleware,
 } from '@reduxjs/toolkit'
 
 import exampleSliceReducer from './exampleSlice'
 
 const immutableInvariantMiddleware = createImmutableStateInvariantMiddleware({
-  ignoredPaths: ['ignoredPath', 'ignoredNested.one', 'ignoredNested.two']
+  ignoredPaths: ['ignoredPath', 'ignoredNested.one', 'ignoredNested.two'],
 })
 
 const store = configureStore({
   reducer: exampleSliceReducer,
   // Note that this will replace all default middleware
-  middleware: [immutableInvariantMiddleware]
+  middleware: [immutableInvariantMiddleware],
 })
 ```
 
@@ -103,10 +105,10 @@ export const exampleSlice = createSlice({
     ignoredPath: 'single level',
     ignoredNested: {
       one: 'one',
-      two: 'two'
-    }
+      two: 'two',
+    },
   },
-  reducers: {}
+  reducers: {},
 })
 
 export default exampleSlice.reducer
@@ -119,12 +121,12 @@ import exampleSliceReducer from './exampleSlice'
 const store = configureStore({
   reducer: exampleSliceReducer,
   // Note that this will replace all default middleware
-  middleware: getDefaultMiddleware =>
+  middleware: (getDefaultMiddleware) =>
     getDefaultMiddleware({
       immutableCheck: {
-        ignoredPaths: ['ignoredPath', 'ignoredNested.one', 'ignoredNested.two']
-      }
-    })
+        ignoredPaths: ['ignoredPath', 'ignoredNested.one', 'ignoredNested.two'],
+      },
+    }),
 })
 ```
 
