--- a/docs/api/matching-utilities.mdx
+++ b/docs/api/matching-utilities.mdx
@@ -5,6 +5,8 @@ sidebar_label: Matching Utilities
 hide_title: true
 ---
 
+&nbsp;
+
 # Matching Utilities
 
 Redux Toolkit exports several type-safe action matching utilities that you can leverage when checking for specific kinds of actions. These are primarily useful for the `builder.addMatcher()` cases in `createSlice` and `createReducer`, as well as when writing custom middleware.
@@ -141,7 +143,7 @@ First, let's examine an unnecessarily complex example:
 import {
   createAsyncThunk,
   createReducer,
-  PayloadAction
+  PayloadAction,
 } from '@reduxjs/toolkit'
 
 interface Data {
@@ -176,7 +178,7 @@ interface ExampleState {
 
 const initialState = {
   isSpecial: false,
-  isInteresting: false
+  isInteresting: false,
 } as ExampleState
 
 export const isSpecialAndInterestingThunk = createAsyncThunk(
@@ -184,13 +186,13 @@ export const isSpecialAndInterestingThunk = createAsyncThunk(
   () => {
     return {
       isSpecial: true,
-      isInteresting: true
+      isInteresting: true,
     }
   }
 )
 
 // This has unnecessary complexity
-const loadingReducer = createReducer(initialState, builder => {
+const loadingReducer = createReducer(initialState, (builder) => {
   builder.addCase(isSpecialAndInterestingThunk.fulfilled, (state, action) => {
     if (isSpecial(action)) {
       state.isSpecial = true
@@ -211,10 +213,10 @@ import {
   initialState,
   isSpecial,
   isInteresting,
-  Data
+  Data,
 } from '@virtual/matchers' // This is a fake pkg that provides the types shown above
 
-const loadingReducer = createReducer(initialState, builder => {
+const loadingReducer = createReducer(initialState, (builder) => {
   builder
     .addMatcher(
       isAllOf(isSpecialAndInterestingThunk.fulfilled, isSpecial),
@@ -267,7 +269,13 @@ function someFunction(action: PayloadAction<Data>) {
 
 <iframe
   src="https://codesandbox.io/embed/redux-toolkit-matchers-example-e765q?fontsize=14&hidenavigation=1&module=%2Fsrc%2Ffeatures%2Fcounter%2FcounterSlice.ts&theme=dark&runonclick=1"
-  style={{width:'100%', height:'500px', border:0, borderRadius: 4, overflow:'hidden'}}
+  style={{
+    width: '100%',
+    height: '500px',
+    border: 0,
+    borderRadius: 4,
+    overflow: 'hidden',
+  }}
   title="redux-toolkit-matchers-example"
   allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
   sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
