--- a/docs/api/otherExports.mdx
+++ b/docs/api/otherExports.mdx
@@ -5,6 +5,8 @@ sidebar_label: Other Exports
 hide_title: true
 ---
 
+&nbsp;
+
 # Other Exports
 
 Redux Toolkit exports some of its internal utilities, and re-exports additional functions from other dependencies as well.
@@ -44,7 +46,7 @@ const addTodo = createAction<Todo>('addTodo')
 
 const initialState = [] as Todo[]
 
-const todosReducer = createReducer(initialState, builder => {
+const todosReducer = createReducer(initialState, (builder) => {
   builder.addCase(addTodo, (state, action) => {
     state.push(action.payload)
     console.log(current(state))
