--- a/docs/rtk-query/api/ApiProvider.mdx
+++ b/docs/rtk-query/api/ApiProvider.mdx
@@ -5,6 +5,8 @@ sidebar_label: ApiProvider
 hide_title: true
 ---
 
+&nbsp;
+
 # `ApiProvider`
 
 [summary](docblock://query/react/ApiProvider.tsx?token=ApiProvider)
