--- a/docs/rtk-query/api/created-api/code-splitting.mdx
+++ b/docs/rtk-query/api/created-api/code-splitting.mdx
@@ -5,6 +5,8 @@ sidebar_label: Code Splitting
 hide_title: true
 ---
 
+&nbsp;
+
 # API Slices: Code Splitting and Generation
 
 Each API slice allows [additional endpoint definitions to be injected at runtime](../../usage/code-splitting.mdx) after the initial API slice has been defined. This can be beneficial for apps that may have _many_ endpoints.
