--- a/docs/rtk-query/usage/code-generation.mdx
+++ b/docs/rtk-query/usage/code-generation.mdx
@@ -5,6 +5,8 @@ sidebar_label: Code Generation
 hide_title: true
 ---
 
+&nbsp;
+
 # Code Generation
 
 ## OpenAPI
@@ -48,10 +50,13 @@ export const api = generatedApi.enhanceEndpoints({
     },
     // alternate notation: callback that gets passed in `endpoint` - you can freely modify the object here
     addPet: (endpoint) => {
-      endpoint.invalidatesTags = (result) => result ? [{ type: 'Pet', id: result.id }] : []
+      endpoint.invalidatesTags = (result) =>
+        result ? [{ type: 'Pet', id: result.id }] : []
     },
     updatePet: {
-      invalidatesTags: (result, error, arg) => [{ type: 'Pet', id: arg.pet.id }],
+      invalidatesTags: (result, error, arg) => [
+        { type: 'Pet', id: arg.pet.id },
+      ],
     },
     deletePet: {
       invalidatesTags: (result, error, arg) => [{ type: 'Pet', id: arg.petId }],
