--- a/docs/rtk-query/usage/conditional-fetching.mdx
+++ b/docs/rtk-query/usage/conditional-fetching.mdx
@@ -5,6 +5,8 @@ sidebar_label: Conditional Fetching
 hide_title: true
 ---
 
+&nbsp;
+
 # Conditional Fetching
 
 If you want to prevent a query from automatically running, you can use the `skip` parameter in a hook.
