--- a/docs/rtk-query/usage/customizing-create-api.mdx
+++ b/docs/rtk-query/usage/customizing-create-api.mdx
@@ -5,6 +5,8 @@ sidebar_label: Customizing createApi
 hide_title: true
 ---
 
+&nbsp;
+
 # Customizing `createApi`
 
 Currently, RTK Query includes two variants of `createApi`:
