--- a/docs/rtk-query/usage/mutations.mdx
+++ b/docs/rtk-query/usage/mutations.mdx
@@ -5,6 +5,8 @@ sidebar_label: Mutations
 hide_title: true
 ---
 
+&nbsp;
+
 # Mutations
 
 Unlike `useQuery`, `useMutation` returns a tuple. The first item in the tuple is the `trigger` function and the second element contains an object with `status`, `error`, and `data`.
