--- a/docs/rtk-query/usage/optimistic-updates.mdx
+++ b/docs/rtk-query/usage/optimistic-updates.mdx
@@ -5,6 +5,8 @@ sidebar_label: Optimistic Updates
 hide_title: true
 ---
 
+&nbsp;
+
 # Optimistic Updates
 
 When you're performing an update on some data that _already exists_ in the cache via [`useMutation`](./mutations), RTK Query gives you a few tools to implement an optimistic update. This can be a useful pattern for when you want to give the user the impression that their changes are immediate.
