--- a/docs/rtk-query/usage/prefetching.mdx
+++ b/docs/rtk-query/usage/prefetching.mdx
@@ -5,6 +5,8 @@ sidebar_label: Prefetching
 hide_title: true
 ---
 
+&nbsp;
+
 # Prefetching
 
 The goal of prefetching is to make data fetch _before_ the user navigates to a page or attempts to load some known content.
