--- a/docs/rtk-query/usage/streaming-updates.mdx
+++ b/docs/rtk-query/usage/streaming-updates.mdx
@@ -5,6 +5,8 @@ sidebar_label: Streaming Updates
 hide_title: true
 ---
 
+&nbsp;
+
 # Streaming Updates
 
 RTK Query gives you the ability to receive **streaming updates** for persistent queries. This enables a query to react to an ongoing connection to the server (typically using WebSockets), updating the cached data as updates to the query are received from the server when they occur.
